# math_solver

./: README.md  index.html  scrypt.js  style.css
Version_1/: index.html  scrypt.js  style.css
Version_2/: .env.example  .gitignore  README.md  chatbot.py  main.py  pyproject.toml
Version_3/: .dockerignore  .env.example  README.md  Version_3_Dokumentation.md  pyproject.toml  requirements.txt
Version_3/src/math_solver/: __init__.py  chatbot.py  config.py  exceptions.py  main.py  math_evaluators.py  models.py  ollama_client.py  tool_detector.py  utils.py
Version_3/src/math_solver/services/: __init__.py  chatbot_service.py  config_service.py
Version_3/src/math_solver/tools/: __init__.py  arithmetic_tool.py  base.py  numeric_tool.py  sympy_tool.py
Version_3/src/math_solver/ui/: __init__.py  components.py  formatters.py  handlers.py
Version_3/src/version_3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: API_REFERENCE.md
mcp_server_poc/: EXPLORATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  integration_example.py  mcp_server.py  pyproject.toml  requirements.txt
mcp_server_poc/docs/: api_reference.md  examples.md  getting_started.md
