[project]
name = "version-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=4.0.0",
    "httpx>=0.25.0",
    "mpmath>=1.3.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
    "sympy>=1.12.0",
    "watchdog>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
math-solver = "math_solver.main:main"
